--- a/myreferences.bib
+++ b/myreferences.bib
@@ -364,4 +364,26 @@ abstract = {This paper presents a study on an adaptive traffic signal controller
 	file = {Lansdowne - Multi-Agent Traffic Simulation.pdf:/Users/mark.cortejo/Zotero/storage/KZ8TJBE6/Lansdowne - Multi-Agent Traffic Simulation.pdf:application/pdf},
 }
 
+
+@article{newman_complex_2011,
+	title = {Complex {Systems}: {A} {Survey}},
+	volume = {79},
+	issn = {0002-9505, 1943-2909},
+	shorttitle = {Complex {Systems}},
+	url = {http://arxiv.org/abs/1112.1440},
+	doi = {10.1119/1.3590372},
+	abstract = {A complex system is a system composed of many interacting parts, often called agents, which displays collective behavior that does not follow trivially from the behaviors of the individual parts. Examples include condensed matter systems, ecosystems, stock markets and economies, biological evolution, and indeed the whole of human society. Substantial progress has been made in the quantitative understanding of complex systems, particularly since the 1980s, using a combination of basic theory, much of it derived from physics, and computer simulation. The subject is a broad one, drawing on techniques and ideas from a wide range of areas. Here I give a survey of the main themes and methods of complex systems science and an annotated bibliography of resources, ranging from classic papers to recent books and reviews.},
+	number = {8},
+	urldate = {2024-03-12},
+	journal = {American Journal of Physics},
+	author = {Newman, M. E. J.},
+	month = aug,
+	year = {2011},
+	note = {arXiv:1112.1440 [cond-mat, physics:physics]},
+	keywords = {Condensed Matter - Statistical Mechanics, Nonlinear Sciences - Adaptation and Self-Organizing Systems, Physics - Physics and Society},
+	pages = {800--810},
+	file = {arXiv Fulltext PDF:C\:\\Users\\Jet\\Zotero\\storage\\VC7Z3FY7\\Newman - 2011 - Complex Systems A Survey.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\Jet\\Zotero\\storage\\UUKA6U9Y\\1112.html:text/html},
+}
+
+
 @incollection{Lindsey2002, author = {Lindsey, R. and Verhoef, E.}, title = {Congestion Modelling}, booktitle = {Handbook of Transport Modelling}, edition = {1st reprint 2002}, publisher = {Pergamon}, pages = {377-397}, year = {2002} }
